--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="btn btn-outline-success me-2 mb-2 mb-lg-0" id="go-to-cart">Ir al Carrito</a>
-          </li>
-          <li class="nav-item">
             <a class="btn btn-outline-primary" href="about.html">Sobre Nosotros</a>
           </li>
           <li class="nav-item">
@@ -53,126 +50,25 @@
             <a class="btn btn-outline-info me-2 mb-2 mb-lg-0" href="eventos.html">Eventos Activos</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-warning mb-2 mb-lg-0" href="#tienda-virtual">Tienda Virtual</a>
+            <a class="btn btn-outline-warning mb-2 mb-lg-0" href="tienda-virtual.html">Tienda Virtual</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class="container py-5" id="main-section">
-    <h1 class="text-center mb-4">Tienda de Accesorios Nexogalax</h1>
-    <div class="row g-4" id="product-list">
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen1.webp" class="card-img-top" alt="Gafas NexoVR-1 Pro">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Gafas NexoVR-1 Pro</h5>
-            <p class="precio fw-bold mb-1">$ 900.000,00 COP</p>
-            <p class="card-text">Gafas de realidad mixta 8K, ultraligeras, streaming 6G y batería flexible de 6h.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal1">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="Gafas NexoVR-1 Pro" data-price="900000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen2.jpeg" class="card-img-top" alt="Controladores Hápticos NX-VR Touch">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Controladores Hápticos NX-VR Touch</h5>
-            <p class="precio fw-bold mb-1">$ 450.000,00 COP</p>
-            <p class="card-text">Controladores hápticos multizona, sin latencia, autonomía 12h y gestos avanzados.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal2">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="Controladores Hápticos NX-VR Touch" data-price="450000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen3.webp" class="card-img-top" alt="NX-Glove Quantum">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">NX-Glove Quantum</h5>
-            <p class="precio fw-bold mb-1">$ 800.000,00 COP</p>
-            <p class="card-text">Guantes hápticos con textura, resistencia física y sensores avanzados.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal3">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="NX-Glove Quantum" data-price="800000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen4.jpeg" class="card-img-top" alt="Traje NX-Suit">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Traje NX-Suit</h5>
-            <p class="precio fw-bold mb-1">$ 3.600.000,00 COP</p>
-            <p class="card-text">Traje háptico modular, sensores biométricos y exoesqueleto parcial.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal4">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="Traje NX-Suit" data-price="3600000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen5.webp" class="card-img-top" alt="BaseStation NX-Hub">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">BaseStation NX-Hub</h5>
-            <p class="precio fw-bold mb-1">$ 2.500.000,00 COP</p>
-            <p class="card-text">Dispositivo central doméstico, sincroniza todo el ecosistema VR.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal5">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="BaseStation NX-Hub" data-price="2500000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen6.jpeg" class="card-img-top" alt="Cámara Facial NexoScan">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Cámara Facial NexoScan</h5>
-            <p class="precio fw-bold mb-1">$ 350.000,00 COP</p>
-            <p class="card-text">Cámara AI para expresiones faciales, 200 FPS y transmisión emocional.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal6">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="Cámara Facial NexoScan" data-price="350000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/imagen7.jpg" class="card-img-top" alt="Plataforma NexoRunner">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">Plataforma NexoRunner</h5>
-            <p class="precio fw-bold mb-1">$ 9.500.000,00 COP</p>
-            <p class="card-text">Plataforma omnidireccional, suspensión personalizada y motor electromagnético.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal7">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="Plataforma NexoRunner" data-price="9500000">Agregar al carrito</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-lg-4 mb-4">
-        <div class="card h-100">
-          <img src="img/ChatGPT Image 19 jun 2025, 08_22_29 a.m..png" class="card-img-top" alt="NX-Sense FullBody">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">NX-Sense FullBody</h5>
-            <p class="precio fw-bold mb-1">$ 7.200.000,00 COP</p>
-            <p class="card-text">Sistema de seguimiento corporal completo para VR y metaverso.</p>
-            <div class="row mt-auto">
-                <button class="btn btn-dark mb-2 col-12" data-bs-toggle="modal" data-bs-target="#modal8">Ver detalles</button>
-                <button class="btn btn-primary add-to-cart col-12" data-name="NX-Sense FullBody" data-price="0">Agregar al carrito</button>
-            </div>
-          </div>
+  <div class="container py-5">
+    <div class="row justify-content-center align-items-center" style="min-height:60vh;">
+      <div class="col-12 col-md-8 col-lg-6 text-center">
+        <h1 class="mb-4">Bienvenido a Nexogalax</h1>
+        <p class="lead mb-5">Explora el metaverso, juega, participa en eventos, compra accesorios y personaliza tu experiencia.</p>
+        <div class="d-grid gap-3">
+          <a href="juego.html" class="btn btn-primary btn-lg">Ir al Juego</a>
+          <a href="minijuegos.html" class="btn btn-info btn-lg">Minijuegos</a>
+          <a href="mundo.html" class="btn btn-dark btn-lg">Explorar Mundo</a>
+          <a href="eventos.html" class="btn btn-warning btn-lg">Eventos Activos</a>
+          <a href="tienda.html" class="btn btn-success btn-lg">Tienda de Accesorios</a>
+          <a href="tienda-virtual.html" class="btn btn-outline-warning btn-lg">Tienda Virtual (Moneda y Cosméticos)</a>
         </div>
       </div>
     </div>
