--- a/carrito.html
+++ b/carrito.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Juego | Nexogalax</title>
+  <title>Carrito de Compras | Nexogalax</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/galaxy-bg.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Nexogalax</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="#navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -39,8 +39,17 @@
     </div>
   </nav>
   <div class="container py-5">
-    <h1 class="text-center mb-4">Sección de Juego</h1>
-    <p class="text-center">Aquí irá la información y acceso al juego principal de Nexogalax.</p>
+    <h1 class="text-center mb-4">Carrito de Compras</h1>
+    <div id="cart-section" class="card galaxy-card p-4">
+      <div id="cart-items">
+        <!-- Aquí se mostrarán los productos agregados al carrito -->
+      </div>
+      <div class="d-flex justify-content-between align-items-center mt-4">
+        <h4>Total: <span id="cart-total">$0</span></h4>
+        <button class="btn btn-success" id="checkout-btn">Finalizar Compra</button>
+      </div>
+    </div>
   </div>
+  <script src="js/script.js"></script>
 </body>
 </html>
