--- a/minijuegos.html
+++ b/minijuegos.html
@@ -16,9 +16,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="btn btn-outline-success me-2 mb-2 mb-lg-0" id="go-to-cart" href="index.html#cart-section">Ir al Carrito</a>
-          </li>
+          <!-- Eliminar del navbar -->
           <li class="nav-item">
             <a class="btn btn-outline-primary" href="about.html">Sobre Nosotros</a>
           </li>
