--- a/tienda-virtual.html
+++ b/tienda-virtual.html
@@ -17,9 +17,6 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="btn btn-outline-success me-2 mb-2 mb-lg-0" id="go-to-cart" href="index.html#cart-section">Ir al Carrito</a>
-          </li>
-          <li class="nav-item">
             <a class="btn btn-outline-primary" href="about.html">Sobre Nosotros</a>
           </li>
           <li class="nav-item">
@@ -42,8 +39,91 @@
     </div>
   </nav>
   <div class="container py-5">
+    <div class="d-flex justify-content-end align-items-center mb-3">
+      <span class="me-2 fw-bold">Saldo Nexocoin:</span>
+      <span id="nexocoin-balance" class="badge bg-warning text-dark fs-5">0</span>
+      <img src="img/coin.png" alt="Nexocoin" style="width:32px; margin-left:8px;">
+    </div>
     <h1 class="text-center mb-4">Tienda Virtual</h1>
-    <p class="text-center">Compra moneda virtual y cosméticos para tu experiencia en Nexogalax.</p>
+    <p class="text-center">Compra Nexocoin, la moneda virtual de Nexogalax, y obtén cosméticos exclusivos para tu avatar y experiencia in-game.</p>
+    <div class="row justify-content-center mb-5">
+      <div class="col-md-8">
+        <div class="card p-4 galaxy-card mb-4">
+          <h2 class="mb-3">Paquetes de Nexocoin</h2>
+          <table class="table table-dark table-striped table-bordered">
+            <thead>
+              <tr>
+                <th>Paquete</th>
+                <th>Cantidad de Nexocoin</th>
+                <th>Precio (COP)</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td>Starter</td><td>500</td><td>$10.000</td><td><button class="btn btn-success btn-sm buy-nexocoin" data-amount="500">Comprar</button></td></tr>
+              <tr><td>Gamer</td><td>1.200</td><td>$20.000</td><td><button class="btn btn-success btn-sm buy-nexocoin" data-amount="1200">Comprar</button></td></tr>
+              <tr><td>Pro</td><td>3.500</td><td>$50.000</td><td><button class="btn btn-success btn-sm buy-nexocoin" data-amount="3500">Comprar</button></td></tr>
+              <tr><td>Legend</td><td>8.000</td><td>$100.000</td><td><button class="btn btn-success btn-sm buy-nexocoin" data-amount="8000">Comprar</button></td></tr>
+              <tr><td>Ultimate</td><td>20.000</td><td>$200.000</td><td><button class="btn btn-success btn-sm buy-nexocoin" data-amount="20000">Comprar</button></td></tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center mb-4">
+      <div class="col-md-8">
+        <div class="card p-4 galaxy-card mb-4 bg-warning-subtle border-warning">
+          <h2 class="mb-3 text-warning">¡Suscríbete y obtén Nexocoin semanal!</h2>
+          <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
+            <div>
+              <h4 class="mb-1">Suscripción Mensual</h4>
+              <p class="mb-1">Incluye <b>300 Nexocoin semanales</b> (1.200 al mes)</p>
+              <p class="mb-0">Precio: <span class="fw-bold">$25.000 COP/mes</span></p>
+            </div>
+            <button class="btn btn-warning btn-lg mt-3 mt-md-0">Suscribirse</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card p-4 galaxy-card">
+          <h2 class="mb-3">Cosméticos Destacados</h2>
+          <div class="row g-3">
+            <div class="col-6 col-md-4">
+              <div class="card bg-dark text-white h-100">
+                <img src="img/cosmetico1.png" class="card-img-top" alt="Cosmético 1">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Casco Galáctico</h5>
+                  <p class="card-text">500 Nexocoin</p>
+                  <button class="btn btn-outline-success btn-sm">Comprar</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4">
+              <div class="card bg-dark text-white h-100">
+                <img src="img/cosmetico2.png" class="card-img-top" alt="Cosmético 2">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Capa de Plasma</h5>
+                  <p class="card-text">1.200 Nexocoin</p>
+                  <button class="btn btn-outline-success btn-sm">Comprar</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4">
+              <div class="card bg-dark text-white h-100">
+                <img src="img/cosmetico3.png" class="card-img-top" alt="Cosmético 3">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Armadura Luminosa</h5>
+                  <p class="card-text">3.000 Nexocoin</p>
+                  <button class="btn btn-outline-success btn-sm">Comprar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
